<resources>
    <string name="app_name">Freya</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="no_account_note">No account yet? Create one</string>
    <string name="have_account_note">Already have an account ?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="minimum_password">6</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="def_web_client_id">362033913045-tgob5limgvur42g90sati3p201svkk6i.apps.googleusercontent.com</string>

    <!-- Strings related to Main Activity -->
    <string name="title_application">FREYA</string>

    <!-- Description String -->
    <string name="logo_desc">Freya Logo</string>
    <string name="title_activity_register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="firefighter_icon">Emergency Response</string>
    <string name="fire_icon">Place Unsafe</string>
    <string name="fireextinct_icon">Safety Instructions</string>
    <string name="firealarm_icon">Warn Fire</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable night mode</string>
    <string name="pref_description_social_recommendations">Enable night mode to ease your eyes
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="settings_icon">Settings</string>
    <string name="temperature_icon">Check Temperature</string>

    <string name="current_temperature">Current Temperature</string>
    <string name="error_no_sensor">-</string>
    <string name="label_temperature">%1$.1f°C</string>

    <string name="contact_email">muhammad.aufa.helfiandri@gmail.com</string>
    <string name="default_subject">Ada Kebakaran</string>
    <string name="default_body">Halo Dunia</string>

    <!--String Related to LatestFireActivity-->
    <string name="locationLabel">Location</string>
    <string name="dateLabel">Date and Time</string>
    <string name="temperatureLabel">Temperature</string>
    <string name="userLabel">Reported By</string>


    <string name="lesson_2_title">Luka Bakar Ringan</string>

    <string name="lesson_2_1_title">1. Alirkan air dingin ke atas luka</string>
    <string name="lesson_2_1_body">Segera alirkan air ke atas luka bakar. Jangan gunakan air es.</string>
    <string name="lesson_2_2_title">2. Segera lepaskan pakaian atau perhiasan ketat</string>
    <string name="lesson_2_2_body">Segera lepaskan benda apa pun yang menghalangi kulit di sekitar luka bakar.</string>
    <string name="lesson_2_3_title">3. Beri kompres dingin</string>
    <string name="lesson_2_3_body">Jika tidak ada air dingin, gunakanlah kompres dingin atau es yang dibungkus dengan handuk.</string>
    <string name="lesson_2_4_title">4. Minum pereda rasa sakit</string>
    <string name="lesson_2_4_body">Obat pereda rasa sakit bisa membantu jika gejala luka bakar cukup mengganggu Anda.</string>
    <string name="lesson_2_5_title">5. Bersihkan luka</string>
    <string name="lesson_2_5_body">Setelah mencuci tangan, gunakanlah sabun dan air untuk membersihkan luka dan mencegah infeksi.</string>
    <string name="lesson_2_6_title">6. Balut luka dengan kain kasa</string>
    <string name="lesson_2_6_body">Jika terkena luka bakar derajat dua, balut luka dengan kain kasa perlahan-lahan dan rekatkan dengan selotip medis.</string>
    <string name="lesson_2_7_title">7. Hindari penggunaan obat rumahan</string>
    <string name="lesson_2_7_body">Obat rumahan seperti putih telur, mentega, dan teh dapat "memperparah" luka karena mengandung bakteri pemicu infeksi.</string>
    <string name="lesson_2_8_title">8. Waspadai terjadinya infeksi pada luka</string>
    <string name="lesson_2_8_body">Luka yang tidak kunjung sembuh bisa menjadi pertanda komplikasi, infeksi, atau luka bakar yang lebih serius.</string>
    <string name="geopointLabel">Geo Point</string>
    <string name="title_activity_temperature_check">Temperature Check</string>
    <string name="title_activity_first_aid">First Aid Tutorial</string>
    <string name="title_activity_report">Report Fire</string>
    <string name="caption_activity_report">You can shake to report!</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_latest_fire">Latest Fire</string>

    <!--String related to Report-->
    <string name="googleMapButton">See Location</string>
    <string name="reportButton">Send Report</string>
</resources>
