<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstAidActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lesson_main_margin_vertical"
                android:layout_marginBottom="@dimen/lesson_main_margin_vertical"
                android:layout_marginStart="@dimen/home_main_margin_horizontal"
                android:layout_marginEnd="@dimen/home_main_margin_horizontal"
                android:paddingBottom="@dimen/lesson_main_margin_vertical"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_1" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_1_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_1_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_2" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_2_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_2_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_3" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_3_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_3_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_4" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_4_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_4_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_5" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_5_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_5_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_6" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_6_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_6_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_7" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_7_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_7_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/patchimage"
                    android:orientation="vertical"
                    android:padding="@dimen/lesson_object_padding"
                    android:layout_marginTop="@dimen/lesson_object_margin_vertical"
                    android:layout_marginBottom="@dimen/lesson_object_margin_vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/lesson_object_image_height"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/lesson_2_8" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_8_title"
                        android:textSize="@dimen/fontsize_lesson_title"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lesson_2_8_body"
                        android:textSize="@dimen/fontsize_lesson_body"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>