<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReportActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperatureLabel"
                android:textColor="@color/primaryTextColor"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/temperatureRepVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:weightSum="3">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateLabel"
                    android:textColor="@color/primaryTextColor"
                    android:layout_weight="2"/>
            <TextView
                    android:id="@+id/dateRepVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:weightSum="3">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locationLabel"
                    android:textColor="@color/primaryTextColor"
                    android:layout_weight="2"/>
            <TextView
                    android:id="@+id/locationRepVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:weightSum="3">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geopointLabel"
                    android:textColor="@color/primaryTextColor"
                    android:layout_weight="2"/>
            <TextView
                    android:id="@+id/geopointRepVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>