<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            card_view:cardCornerRadius="@dimen/card_album_radius">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4"
    android:padding="@dimen/lesson_object_padding">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="3">
            <TextView
                    android:text="@string/locationLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
            android:textSize="@dimen/fontsize_lesson_body"
            android:textColor="@color/secondaryTextColor"/>
            <TextView
                    android:id="@+id/locationVal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                    android:text="@string/dateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
            <TextView
                    android:id="@+id/dateVal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                    android:text="@string/temperatureLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
            <TextView
                    android:id="@+id/temperatureVal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
            <TextView
                    android:text="@string/userLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
            <TextView
                    android:id="@+id/userVal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_lesson_body"
                    android:textColor="@color/secondaryTextColor"/>
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>